[tool.poetry]
name = "pagbanck-sdk-python"
version = "0.1.0"
description = ""
authors = ["christianalcantara <christian.douglas.alcantara@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pydantic = {version = "1.10.18", extras = ["email"]}


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
